tests/snapshots/typeck__pass_self_derived-ast.snap
---
source: tests/typeck.rs
description: "class Base {\n    x : SELF_TYPE <- self;\n    x_id : SELF_TYPE <- id();\n\n    id(): SELF_TYPE {\n        self\n    };\n};\n\nclass Main inherits Base {\n    main(): SELF_TYPE {{\n        x <- self;\n        x_id <- id();\n    }};\n};\n"
expression: "SnapshotData { failed, classes: &classes }"
---
SnapshotData(
  failed: false,
  classes: [
    Class(
      name: TyName(Name(Spanned(
        value: "Base",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 9,
            line: 1,
            col: 10,
          ),
        ),
      ))),
      inherits: None,
      features: [
        Field(Field(Binding(
          name: Name(Spanned(
            value: "x",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 17,
                line: 2,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 17,
                line: 2,
                col: 5,
              ),
            ),
          )),
          ty_name: TyName(Name(Spanned(
            value: "SELF_TYPE",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 21,
                line: 2,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 29,
                line: 2,
                col: 17,
              ),
            ),
          ))),
          init: Some(Name(NameExpr(
            name: Name(Spanned(
              value: "self",
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 34,
                  line: 2,
                  col: 22,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 37,
                  line: 2,
                  col: 25,
                ),
              ),
            )),
            ty: Some(Resolved(SelfType(
              enclosed: Class("Base"),
            ))),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 17,
              line: 2,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 17,
              line: 2,
              col: 5,
            ),
          ),
          ty: Resolved(SelfType(
            enclosed: Class("Base"),
          )),
        ))),
        Field(Field(Binding(
          name: Name(Spanned(
            value: "x_id",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 44,
                line: 3,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 47,
                line: 3,
                col: 8,
              ),
            ),
          )),
          ty_name: TyName(Name(Spanned(
            value: "SELF_TYPE",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 51,
                line: 3,
                col: 12,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 59,
                line: 3,
                col: 20,
              ),
            ),
          ))),
          init: Some(Call(Call(
            receiver: SelfType(
              ty: Resolved(SelfType(
                enclosed: Class("Base"),
              )),
              method_name_span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 64,
                  line: 3,
                  col: 25,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 65,
                  line: 3,
                  col: 26,
                ),
              ),
            ),
            method: Name(Spanned(
              value: "id",
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 64,
                  line: 3,
                  col: 25,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 65,
                  line: 3,
                  col: 26,
                ),
              ),
            )),
            args: [],
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 64,
                line: 3,
                col: 25,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 65,
                line: 3,
                col: 26,
              ),
            ),
            ty: Some(Resolved(SelfType(
              enclosed: Class("Base"),
            ))),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 44,
              line: 3,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 47,
              line: 3,
              col: 8,
            ),
          ),
          ty: Resolved(SelfType(
            enclosed: Class("Base"),
          )),
        ))),
        Method(Method(
          name: Name(Spanned(
            value: "id",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 75,
                line: 5,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 76,
                line: 5,
                col: 6,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "SELF_TYPE",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 81,
                line: 5,
                col: 11,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 89,
                line: 5,
                col: 19,
              ),
            ),
          ))),
          body: Name(NameExpr(
            name: Name(Spanned(
              value: "self",
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 101,
                  line: 6,
                  col: 9,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 104,
                  line: 6,
                  col: 12,
                ),
              ),
            )),
            ty: Some(Resolved(SelfType(
              enclosed: Class("Base"),
            ))),
          )),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 75,
              line: 5,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 76,
              line: 5,
              col: 6,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [],
            ret: SelfType(
              enclosed: Class("Base"),
            ),
          ))),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 0,
          line: 1,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 4,
          line: 1,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Base")),
    ),
    Class(
      name: TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 123,
            line: 10,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 126,
            line: 10,
            col: 10,
          ),
        ),
      ))),
      inherits: Some(TyName(Name(Spanned(
        value: "Base",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 137,
            line: 10,
            col: 21,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 140,
            line: 10,
            col: 24,
          ),
        ),
      )))),
      features: [
        Method(Method(
          name: Name(Spanned(
            value: "main",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 148,
                line: 11,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 151,
                line: 11,
                col: 8,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "SELF_TYPE",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 156,
                line: 11,
                col: 13,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 164,
                line: 11,
                col: 21,
              ),
            ),
          ))),
          body: Block(Block(
            body: [
              Assignment(Assignment(
                name: Name(Spanned(
                  value: "x",
                  span: Span(
                    start: Position(
                      src: Some(SourceId(1)),
                      byte: 177,
                      line: 12,
                      col: 9,
                    ),
                    end: Position(
                      src: Some(SourceId(1)),
                      byte: 177,
                      line: 12,
                      col: 9,
                    ),
                  ),
                )),
                expr: Name(NameExpr(
                  name: Name(Spanned(
                    value: "self",
                    span: Span(
                      start: Position(
                        src: Some(SourceId(1)),
                        byte: 182,
                        line: 12,
                        col: 14,
                      ),
                      end: Position(
                        src: Some(SourceId(1)),
                        byte: 185,
                        line: 12,
                        col: 17,
                      ),
                    ),
                  )),
                  ty: Some(Resolved(SelfType(
                    enclosed: Class("Main"),
                  ))),
                )),
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 177,
                    line: 12,
                    col: 9,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 177,
                    line: 12,
                    col: 9,
                  ),
                ),
              )),
              Assignment(Assignment(
                name: Name(Spanned(
                  value: "x_id",
                  span: Span(
                    start: Position(
                      src: Some(SourceId(1)),
                      byte: 196,
                      line: 13,
                      col: 9,
                    ),
                    end: Position(
                      src: Some(SourceId(1)),
                      byte: 199,
                      line: 13,
                      col: 12,
                    ),
                  ),
                )),
                expr: Call(Call(
                  receiver: SelfType(
                    ty: Resolved(SelfType(
                      enclosed: Class("Main"),
                    )),
                    method_name_span: Span(
                      start: Position(
                        src: Some(SourceId(1)),
                        byte: 204,
                        line: 13,
                        col: 17,
                      ),
                      end: Position(
                        src: Some(SourceId(1)),
                        byte: 205,
                        line: 13,
                        col: 18,
                      ),
                    ),
                  ),
                  method: Name(Spanned(
                    value: "id",
                    span: Span(
                      start: Position(
                        src: Some(SourceId(1)),
                        byte: 204,
                        line: 13,
                        col: 17,
                      ),
                      end: Position(
                        src: Some(SourceId(1)),
                        byte: 205,
                        line: 13,
                        col: 18,
                      ),
                    ),
                  )),
                  args: [],
                  span: Span(
                    start: Position(
                      src: Some(SourceId(1)),
                      byte: 204,
                      line: 13,
                      col: 17,
                    ),
                    end: Position(
                      src: Some(SourceId(1)),
                      byte: 205,
                      line: 13,
                      col: 18,
                    ),
                  ),
                  ty: Some(Resolved(SelfType(
                    enclosed: Class("Main"),
                  ))),
                )),
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 196,
                    line: 13,
                    col: 9,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 199,
                    line: 13,
                    col: 12,
                  ),
                ),
              )),
            ],
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 167,
                line: 11,
                col: 24,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 167,
                line: 11,
                col: 24,
              ),
            ),
          )),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 148,
              line: 11,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 151,
              line: 11,
              col: 8,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [],
            ret: SelfType(
              enclosed: Class("Main"),
            ),
          ))),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 117,
          line: 10,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 121,
          line: 10,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Main")),
    ),
  ],
)
