tests/snapshots/typeck__pass_static_dispatch_self-ast.snap
---
source: tests/typeck.rs
description: "class Main inherits IO {\n    main(): Main {\n        self@IO.out_int(42)\n    };\n};\n"
expression: "SnapshotData { failed, classes: &classes }"
---
SnapshotData(
  failed: false,
  classes: [
    Class(
      name: TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 9,
            line: 1,
            col: 10,
          ),
        ),
      ))),
      inherits: Some(TyName(Name(Spanned(
        value: "IO",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 20,
            line: 1,
            col: 21,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 21,
            line: 1,
            col: 22,
          ),
        ),
      )))),
      features: [
        Method(Method(
          name: Name(Spanned(
            value: "main",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 29,
                line: 2,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 32,
                line: 2,
                col: 8,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "Main",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 37,
                line: 2,
                col: 13,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 40,
                line: 2,
                col: 16,
              ),
            ),
          ))),
          body: Call(Call(
            receiver: Static(
              object: Name(NameExpr(
                name: Name(Spanned(
                  value: "self",
                  span: Span(
                    start: Position(
                      src: Some(SourceId(1)),
                      byte: 52,
                      line: 3,
                      col: 9,
                    ),
                    end: Position(
                      src: Some(SourceId(1)),
                      byte: 55,
                      line: 3,
                      col: 12,
                    ),
                  ),
                )),
                ty: Some(Resolved(SelfType(
                  enclosed: Class("Main"),
                ))),
              )),
              ty_name: TyName(Name(Spanned(
                value: "IO",
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 57,
                    line: 3,
                    col: 14,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 58,
                    line: 3,
                    col: 15,
                  ),
                ),
              ))),
              ty: Resolved(Builtin(IO)),
            ),
            method: Name(Spanned(
              value: "out_int",
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 60,
                  line: 3,
                  col: 17,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 66,
                  line: 3,
                  col: 23,
                ),
              ),
            )),
            args: [
              Int(IntLit(Spanned(
                value: 42,
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 68,
                    line: 3,
                    col: 25,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 69,
                    line: 3,
                    col: 26,
                  ),
                ),
              ))),
            ],
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 52,
                line: 3,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 55,
                line: 3,
                col: 12,
              ),
            ),
            ty: Some(Resolved(SelfType(
              enclosed: Class("Main"),
            ))),
          )),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 29,
              line: 2,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 32,
              line: 2,
              col: 8,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [],
            ret: Class("Main"),
          ))),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 0,
          line: 1,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 4,
          line: 1,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Main")),
    ),
  ],
)
